// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useTxsCSVData Custom Hook should match the formatTxsCSVData result with the snapshot 1`] = `
Array [
  Object {
    "Date": "2023-05-04T18:10:58.000Z",
    "Fee Amount": "0.456789",
    "Fee Currency": "STX",
    "Net Worth Amount": NaN,
    "Net Worth Currency": "STX",
    "Received Amount": "0.987654",
    "Received Currency": "STX",
    "Sent Amount": "0.123456",
    "Sent Currency": "STX",
    "TxHash": "tx_1234",
  },
  Object {
    "Date": "2023-06-12T08:30:15.000Z",
    "Fee Amount": "0.789012",
    "Fee Currency": "STX",
    "Net Worth Amount": NaN,
    "Net Worth Currency": "STX",
    "Received Amount": "0.234567",
    "Received Currency": "STX",
    "Sent Amount": "0.987654",
    "Sent Currency": "STX",
    "TxHash": "tx_5678",
  },
  Object {
    "Date": "2023-07-25T13:45:30.000Z",
    "Fee Amount": "0.345678",
    "Fee Currency": "STX",
    "Net Worth Amount": NaN,
    "Net Worth Currency": "STX",
    "Received Amount": "0.789012",
    "Received Currency": "STX",
    "Sent Amount": "0.234567",
    "Sent Currency": "STX",
    "TxHash": "tx_9012",
  },
  Object {
    "Date": "2023-08-05T16:20:05.000Z",
    "Fee Amount": "0.123456",
    "Fee Currency": "STX",
    "Net Worth Amount": NaN,
    "Net Worth Currency": "STX",
    "Received Amount": "0.345678",
    "Received Currency": "STX",
    "Sent Amount": "0.789012",
    "Sent Currency": "STX",
    "TxHash": "tx_3456",
  },
  Object {
    "Date": "2023-09-15T21:05:40.000Z",
    "Fee Amount": "0.987654",
    "Fee Currency": "STX",
    "Net Worth Amount": NaN,
    "Net Worth Currency": "STX",
    "Received Amount": "0.123456",
    "Received Currency": "STX",
    "Sent Amount": "0.345678",
    "Sent Currency": "STX",
    "TxHash": "tx_7890",
  },
]
`;

exports[`useTxsCSVData Custom Hook should match the getTxsCSVData result with the snapshot 1`] = `
Array [
  Object {
    "Date": "2023-05-04T18:10:58.000Z",
    "Fee Amount": "0.456789",
    "Fee Currency": "STX",
    "Net Worth Amount": 1.987654,
    "Net Worth Currency": "STX",
    "Received Amount": "0.987654",
    "Received Currency": "STX",
    "Sent Amount": "0.123456",
    "Sent Currency": "STX",
    "TxHash": "tx_1234",
  },
  Object {
    "Date": "2023-06-12T08:30:15.000Z",
    "Fee Amount": "0.789012",
    "Fee Currency": "STX",
    "Net Worth Amount": 1.234567,
    "Net Worth Currency": "STX",
    "Received Amount": "0.234567",
    "Received Currency": "STX",
    "Sent Amount": "0.987654",
    "Sent Currency": "STX",
    "TxHash": "tx_5678",
  },
  Object {
    "Date": "2023-07-25T13:45:30.000Z",
    "Fee Amount": "0.345678",
    "Fee Currency": "STX",
    "Net Worth Amount": 1.789012,
    "Net Worth Currency": "STX",
    "Received Amount": "0.789012",
    "Received Currency": "STX",
    "Sent Amount": "0.234567",
    "Sent Currency": "STX",
    "TxHash": "tx_9012",
  },
  Object {
    "Date": "2023-08-05T16:20:05.000Z",
    "Fee Amount": "0.123456",
    "Fee Currency": "STX",
    "Net Worth Amount": 1.345678,
    "Net Worth Currency": "STX",
    "Received Amount": "0.345678",
    "Received Currency": "STX",
    "Sent Amount": "0.789012",
    "Sent Currency": "STX",
    "TxHash": "tx_3456",
  },
  Object {
    "Date": "2023-09-15T21:05:40.000Z",
    "Fee Amount": "0.987654",
    "Fee Currency": "STX",
    "Net Worth Amount": 1.123456,
    "Net Worth Currency": "STX",
    "Received Amount": "0.123456",
    "Received Currency": "STX",
    "Sent Amount": "0.345678",
    "Sent Currency": "STX",
    "TxHash": "tx_7890",
  },
]
`;
